test(iped-mcp): run T028 on a 15M-item case and make the harness able to open one
SC-002 and SC-015 were the gap the quickstart called non-negotiable. They
are now measured, on a real case of 15,061,999 items over a 68.6 GB index,
on the JRE 11 the release ships:

  open + overview              3050 ms  (budget 30000)
  first page of *:* (50)        655 ms  (budget  5000)
  exact total, 1 item           817 ms  (budget  5000)
  aggregate by category        4490 ms  (budget 15000)
  ten pages deep, worst         836 ms  (budget  5000)
                               page 1 836 ms, page 10 479 ms

The last line is the one that matters: page ten is faster than page one, so
cost tracks the page rather than the depth. That is the difference between
PagedSearcher and anything built on IPEDSearcher.searchAll(), and R3
predicted it - now it is measured rather than argued. The suite prints its
measurements from now on, because pass/fail alone cannot show a run
drifting toward a budget until the day it crosses.

Running it at all needed two harness fixes. The suites had never opened a
real case, so nothing had noticed that they could not:

- The engine configuration was never loaded. IPEDSource calls the loader
  itself, but what a case folder carries is not enough on its own, and the
  open failed with CASE_INACCESSIBLE and a null IndexTaskConfig.
  requireIpedConfiguration() now loads it from -Diped.mcp.ipedRoot exactly
  as McpServerMain.main does. This would have hit every integration suite
  the day T006's reference case exists.
- On JDK 16+ the engine cannot load at all: the task installer pulls in
  FST, which reflects into JDK internals that Java permitted through 15 and
  refuses from 16 on. The harness now refuses up front, naming the release's
  bundled JRE and the -Djvm flag, instead of dying inside a serialization
  library. Granting --add-opens per package was tried and abandoned - it is
  one package per failure, and a partial set only moves the confusion.

151 