@@ -8,6 +8,7 @@ import org.junit.Assume;
 
 import iped.mcp.config.McpServerConfig;
 
+
 /**
  * Shared plumbing for the test suites.
  *
@@ -28,6 +29,9 @@ import iped.mcp.config.McpServerConfig;
  * <li>{@code -Diped.mcp.test.largeCase=<path>} or {@code IPED_MCP_LARGE_CASE} — the ~10 M item case
  * used by the scale suite. The difference between paging and materializing does not show up on the
  * small case.</li>
+ * <li>{@code -Diped.mcp.ipedRoot=<path>} or {@code IPED_ROOT} — an unpacked IPED release. Required
+ * alongside either case: the engine configuration has to be loaded before a case can be opened, and
+ * the server does it from the installation at startup. See {@link #requireIpedConfiguration()}.</li>
  * </ul>
  */
 public final class McpTestSupport {
@@ -68,6 +72,7 @@ public final class McpTestSupport {
         Assume.assumeTrue("Reference case not available. Build it from "
                 + "iped-mcp/src/test/resources/reference-case/README.md and set -D" + REFERENCE_CASE_PROPERTY
                 + "=<path> (or " + REFERENCE_CASE_ENV + ").", referenceCase != null);
+        requireIpedConfiguration();
         return referenceCase;
     }
 
@@ -80,7 +85,93 @@ public final class McpTestSupport {
         Assume.assumeTrue("Large reference case (~10 M items) not available. Set -D" + LARGE_CASE_PROPERTY
                 + "=<path> (or " + LARGE_CASE_ENV + "). SC-002 and SC-015 are not verified without it.",
                 largeCase != null);
+        requireIpedConfiguration();
         return largeCase;
+    }
+
+    /**
+     * Loads the IPED configuration from an installation, exactly as {@code McpServerMain.main} does
+     * before serving.
+     *
+     * <p>
+     * Opening a case needs the engine's configurables — {@code IndexTaskConfig} for the analyzer,
+     * {@code AnalysisConfig} for the searcher, {@code CategoryConfig} for the category tree.
+     * {@code IPEDSource} does call the loader itself, but the loader runs once per process and what
+     * a case folder carries is not enough on its own: without this bootstrap the open fails with
+     * {@code CASE_INACCESSIBLE} and a null {@code IndexTaskConfig}.
+     *
+     * <p>
+     * This is deliberately a <b>failure</b> rather than a skip. It only runs once a real case has
+     * been configured, which means someone asked for a real run; skipping there would report
+     * "nothing to do" for what is actually a misconfigured bench, and a skipped test is not a
+     * passing test.
+     */
+    public static synchronized void requireIpedConfiguration() {
+        if (configurationLoaded) {
+            return;
+        }
+        File ipedRoot = Diagnostics.resolveIpedRoot();
+        if (ipedRoot == null || !new File(ipedRoot, "conf").isDirectory()) {
+            throw new AssertionError("A case is configured but the IPED installation is not, so the engine "
+                    + "configuration cannot be loaded and no case can be opened. Set -D"
+                    + Diagnostics.IPED_ROOT_PROPERTY + "=<path> (or " + Diagnostics.IPED_ROOT_ENV
+                    + ") to the folder of an unpacked IPED release — the one containing iped.jar, conf/ and "
+                    + "lib/.");
+        }
+        requireRuntimeThatCanLoadTheEngine(ipedRoot);
+        // The returned configuration is the installation's own; the suites keep theirs, with the
+        // audit area pointed at a temporary folder. What is wanted here is the side effect on the
+        // engine's ConfigurationManager.
+        McpServerMain.bootstrapConfiguration(ipedRoot);
+        configurationLoaded = true;
+    }
+
+    private static boolean configurationLoaded;
+
+    /**
+     * Refuses to run the engine on a JVM that will not let it load, naming the runtime to use.
+     *
+     * <p>
+     * Loading the engine's task installer pulls in FST, the serialization library behind
+     * {@code RegexTask}'s automaton, and FST reflects into JDK internals — {@code String.value},
+     * {@code BigDecimal.intVal}, and more as it registers its default classes. Java permitted that
+     * with a warning up to 15 and refuses it from 16 on, so on a newer JVM the suite dies with an
+     * {@code InaccessibleObjectException} thrown from inside a serialization library, which
+     * explains nothing about what to do.
+     *
+     * <p>
+     * Opening the module up with {@code --add-opens} would be chasing one package per failure, and
+     * a half-granted set only moves the confusion. The suites run on the runtime the release ships
+     * and production uses, and this says so before anything fails.
+     */
+    private static void requireRuntimeThatCanLoadTheEngine(File ipedRoot) {
+        int major = majorJavaVersion();
+        if (major < 16) {
+            return;
+        }
+        File bundled = new File(ipedRoot, "jre/bin/java" + (isWindows() ? ".exe" : ""));
+        throw new AssertionError("These tests load the IPED engine, which needs the deep reflection that Java "
+                + "permits up to 15 and refuses from 16 on. This JVM is Java " + major
+                + ", so the engine cannot be loaded here — the failure would come from inside FST as an "
+                + "InaccessibleObjectException. Run the suite on the runtime the release ships, which is what "
+                + "production uses: add -Djvm=\"" + bundled.getAbsolutePath() + "\" to the Maven command line, "
+                + "or point JAVA_HOME at a JDK 11 as the build documents.");
+    }
+
+    private static int majorJavaVersion() {
+        String version = System.getProperty("java.specification.version", "11");
+        // "1.8" on the old scheme, "11" and up on the current one.
+        int dot = version.indexOf('.');
+        String major = version.startsWith("1.") ? version.substring(2) : dot < 0 ? version : version.substring(0, dot);
+        try {
+            return Integer.parseInt(major.trim());
+        } catch (NumberFormatException e) {
+            return 11;
+        }
+    }
+
+    private static boolean isWindows() {
+        return System.getProperty("os.name", "").toLowerCase(java.util.Locale.ROOT).contains("win");
     }
 
     /** A configuration whose audit area points at a temporary folder, isolated per test. */
